--- a/enVision-Magazine/enVisionMagazine-article.html
+++ b/enVision-Magazine/enVisionMagazine-article.html
@@ -99,7 +99,7 @@
 
 
         <!-- Share Options -->
-        <div id="share-options" class="share-options hidden">
+        <div id="share-options" class="share-options">
         <a href="mailto:?subject=Check this out!&body=I thought you’d find this interesting: https://yourwebsite.com" target="_blank">
           <img src="Images/email.png" alt="Email" class="icon email">
         </a>
@@ -122,7 +122,6 @@
           <img src="Images/linkedIn.png" alt="LinkedIn" class="icon linkedin">
         </a>
       </div>
-
     </div>
 
 <div class="stories">
