Fix Videos in documentaries

--- a/enVision-Documentaries/videoPage.html
+++ b/enVision-Documentaries/videoPage.html
@@ -35,8 +35,15 @@
             <section class="video-sec">
                 <div class="video-screen">
                     <div class="video-part">
-                        <video class="vid" src="videos/QuickStatistics.mp4" controls poster="images/worldCup.jpg">
-                        </video>
+                        <iframe class="vid" 
+                                width="640" 
+                                height="360" 
+                            src="https://www.youtube.com/embed/3E3HRQWFJJM" 
+                                title="Quick Statistics Video" 
+                                frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen>
+                        </iframe>
                     </div>
                     <h1 class="title"> World Cup Statistics </h1>
                 </div>
