--- a/enVision-Documentaries/videoPage2.html
+++ b/enVision-Documentaries/videoPage2.html
@@ -35,8 +35,15 @@
             <section class="video-sec">
                 <div class="video-screen">
                     <div class="video-part">
-                        <video class="vid vid2" src="videos/Photography-Progress.mp4" controls poster="images/Photography-Thumbnail.png">
-                        </video>
+                        <iframe class="vid" 
+                                width="640" 
+                                height="360" 
+                                src="https://www.youtube.com/embed/vD_oSIlMWVc" 
+                                title="Photography Progress Video" 
+                                frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen>
+                        </iframe>
                     </div>
                     <h1 class="title"> Museum of Progress: Photography Timeline </h1>
                 </div>
