--- a/enVision-Magazine/enVisionMagazine-g1.html
+++ b/enVision-Magazine/enVisionMagazine-g1.html
@@ -99,37 +99,37 @@
         <div id="share-options" class="share-options hidden">
         <!-- Email -->
         <a href="mailto:?subject=Check this out!&body=I thought you’d find this interesting: https://yourwebsite.com" target="_blank">
-            <img src="Images/email.png" alt="Email">
+          <img src="Images/email.png" alt="Email" class="icon email">
         </a>
 
         <!-- Facebook -->
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://yourwebsite.com" target="_blank">
-            <img src="Images/facebookHover.png" alt="Facebook">
+          <img src="Images/facebook.png" alt="Facebook" class="icon facebook">
         </a>
 
         <!-- Twitter / X -->
         <a href="https://twitter.com/intent/tweet?url=https://yourwebsite.com&text=Check this out!" target="_blank">
-            <img src="Images/x.png" alt="X">
+          <img src="Images/twitter.png" alt="Twitter" class="icon twitter">
         </a>
 
         <!-- WhatsApp -->
         <a href="https://wa.me/?text=Check this out! https://yourwebsite.com" target="_blank">
-            <img src="Images/whatsapp.png" alt="WhatsApp">
+          <img src="Images/whatsapp.png" alt="WhatsApp" class="icon whatsapp">
         </a>
 
         <!-- Telegram -->
         <a href="https://t.me/share/url?url=https://yourwebsite.com&text=Check this out!" target="_blank">
-            <img src="Images/telegram.png" alt="Telegram">
+          <img src="Images/telegram.png" alt="Telegram" class="icon telegram">
         </a>
 
         <!-- Instagram (⚠️ No direct share URL like others, best option is profile/page link) -->
         <a href="https://www.instagram.com/" target="_blank">
-            <img src="Images/instagram.png" alt="Instagram">
+          <img src="Images/instagram.png" alt="Instagram" class="icon instagram">
         </a>
 
         <!-- LinkedIn -->
         <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://yourwebsite.com" target="_blank">
-            <img src="Images/linkedIn.png" alt="LinkedIn">
+          <img src="Images/linkedIn.png" alt="LinkedIn" class="icon linkedin">
         </a>
         </div>
     </div>
