--- a/enVision-Statistics/enVisionStatistics.html
+++ b/enVision-Statistics/enVisionStatistics.html
@@ -417,14 +417,14 @@
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
     <img src="images/facebook.png" >
-    <img src="images/twitter.png" >
+    <img src="images/x.png" >
     <img src="images/youtube.png" class="youtubeIcon">
 </div>
 <p> info.-envision@innovi.com </p>
 </footer>
 
 <!-- Footer -->
-	<script type="module" src="js/stories.js"></script>
+	
 
 	</body>
 </html>
