--- a/enVision-Documentaries/about.html
+++ b/enVision-Documentaries/about.html
@@ -16,7 +16,7 @@
                     <img src="images/enVisionO.png">
                 </div>
                 <nav>
-                    <a href="enVisionMagazine.html"> Home </a>
+                    <a href="enVisionDocumentaries.html"> Home </a>
                     <a href="about.html"> About </a>
                     <a href="#contact"> Contact </a>
                 </nav>
@@ -25,7 +25,7 @@
                     <input type="text" name="query" placeholder="Search...">
                 </form>
             </div>
-            <h2 class="title"> About </h2>
+            <h1 class="title"> About </h1>
             <div class="hero">
               <h3> Ideation </h3>
               <p>
@@ -61,15 +61,13 @@
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
     <img src="images/facebook.png" >
-    <img src="images/twitter.png" >
+    <img src="images/x.png" >
     <img src="images/youtube.png" class="youtubeIcon">
 </div>
 <p> info.-envision@innovi.com </p>
 </footer>
 
 <!-- Footer -->
-
-	<script type="module" src="js/stories.js"></script>
 
 	</body>
 </html>
