--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -68,7 +68,7 @@
 <footer id="contact">
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
-    <img src="images/facebookHover.png" class="facebookIcon">
+    <img src="images/facebook.png" class="facebookIcon">
     <img src="images/x.png" class="xIcon">
     <img src="images/youtube.png" class="youtubeIcon">
 </div>
@@ -76,8 +76,6 @@
 </footer>
 
 <!-- Footer -->
-
-	<script type="module" src="js/stories.js"></script>
 
 	</body>
 </html>
