--- a/enVision-Documentaries/videoPage2.html
+++ b/enVision-Documentaries/videoPage2.html
@@ -97,7 +97,7 @@
 <footer id="contact" class="vid-footer">
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
-    <img src="images/facebookHover.png" class="facebookIcon">
+    <img src="images/facebook.png" class="facebookIcon">
     <img src="images/x.png" class="xIcon">
     <img src="images/youtube.png" class="youtubeIcon">
 </div>
@@ -105,8 +105,6 @@
 </footer>
 
 <!-- Footer -->
-
-	<script type="module" src="js/stories.js"></script>
 
 	</body>
 </html>
