--- a/enVision-Documentaries/about.html
+++ b/enVision-Documentaries/about.html
@@ -60,7 +60,7 @@
 <footer id="contact">
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
-    <img src="images/facebook.png" >
+    <img src="images/facebookHover.png" >
     <img src="images/x.png" >
     <img src="images/youtube.png" class="youtubeIcon">
 </div>
