--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -68,7 +68,7 @@
 <footer id="contact">
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
-    <img src="images/facebook.png" class="facebookIcon">
+    <img src="images/facebookHover.png" class="facebookIcon">
     <img src="images/x.png" class="xIcon">
     <img src="images/youtube.png" class="youtubeIcon">
 </div>
